// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Modal AvecBackdropBlur smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`design-system/Modal AvecFooter smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`design-system/Modal Controlled smoke-test 1`] = `
<div class="p-8">
  <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    Open
  </button>
</div>
`;

exports[`design-system/Modal Default smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`design-system/Modal LongContent smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`design-system/Modal Size smoke-test 1`] = `
<div class="p-8">
  <div class="flex items-center gap-6">
    <button text="sm"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      sm
    </button>
    <button text="md"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      md
    </button>
    <button text="lg"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      lg
    </button>
    <button text="xl"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      xl
    </button>
  </div>
</div>
`;

exports[`design-system/Modal WithRender smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    Ouvrir la modale
  </button>
</div>
`;

exports[`design-system/Modal onlyRender smoke-test 1`] = `
<div class="p-8">
  <button text="Ouvrir la modale"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
  >
    Ouvrir la modale
  </button>
</div>
`;
